force-app/main/default/objects/Flag__c/Flag__c.object-meta.xml
<CustomObject>
    <label>Flag</label>
    <pluralLabel>Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Flag Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>