force-app/main/default/objects/Flag__c/fields/Apache_wars__c.field-meta.xml
<CustomField>
    <fullName>Apache_wars__c</fullName>
    <label>Apache wars</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>