force-app/main/default/objects/Flag__c/fields/Bixby_letter_sent__c.field-meta.xml
<CustomField>
    <fullName>Bixby_letter_sent__c</fullName>
    <label>Bixby letter sent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>