force-app/main/default/objects/Flag__c/fields/Bonnie_blue_flag__c.field-meta.xml
<CustomField>
    <fullName>Bonnie_blue_flag__c</fullName>
    <label>Bonnie blue flag</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>