force-app/main/default/objects/Flag__c/fields/Botanical_expedition_threatened__c.field-meta.xml
<CustomField>
    <fullName>Botanical_expedition_threatened__c</fullName>
    <label>Botanical expedition threatened</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>