force-app/main/default/objects/Flag__c/fields/Cavour_has_done_his__c.field-meta.xml
<CustomField>
    <fullName>Cavour_has_done_his__c</fullName>
    <label>Cavour has done his</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>