force-app/main/default/objects/Flag__c/fields/Clay_and_douglas_draft_enacted__c.field-meta.xml
<CustomField>
    <fullName>Clay_and_douglas_draft_enacted__c</fullName>
    <label>Clay and douglas draft enacted</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>