force-app/main/default/objects/Flag__c/fields/Code_of_laws__c.field-meta.xml
<CustomField>
    <fullName>Code_of_laws__c</fullName>
    <label>Code of laws</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>