force-app/main/default/objects/Flag__c/fields/Corn_laws_repealed_flag__c.field-meta.xml
<CustomField>
    <fullName>Corn_laws_repealed_flag__c</fullName>
    <label>Corn laws repealed flag</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>