force-app/main/default/objects/Flag__c/fields/Corwin_amendment_enacted__c.field-meta.xml
<CustomField>
    <fullName>Corwin_amendment_enacted__c</fullName>
    <label>Corwin amendment enacted</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>