force-app/main/default/objects/Flag__c/fields/Crisis_on_the_rhine__c.field-meta.xml
<CustomField>
    <fullName>Crisis_on_the_rhine__c</fullName>
    <label>Crisis on the rhine</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>