force-app/main/default/objects/Flag__c/fields/Dar_al_funun_built__c.field-meta.xml
<CustomField>
    <fullName>Dar_al_funun_built__c</fullName>
    <label>Dar al funun built</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>