force-app/main/default/objects/Flag__c/fields/Dred_scott_decision__c.field-meta.xml
<CustomField>
    <fullName>Dred_scott_decision__c</fullName>
    <label>Dred scott decision</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>