force-app/main/default/objects/Flag__c/fields/Emigrant_aid_company__c.field-meta.xml
<CustomField>
    <fullName>Emigrant_aid_company__c</fullName>
    <label>Emigrant aid company</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>