force-app/main/default/objects/Flag__c/fields/Facundo__c.field-meta.xml
<CustomField>
    <fullName>Facundo__c</fullName>
    <label>Facundo</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>