force-app/main/default/objects/Flag__c/fields/French_foreign_legion_supported__c.field-meta.xml
<CustomField>
    <fullName>French_foreign_legion_supported__c</fullName>
    <label>French foreign legion supported</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>