force-app/main/default/objects/Flag__c/fields/Fugitive_slave_act_enacted__c.field-meta.xml
<CustomField>
    <fullName>Fugitive_slave_act_enacted__c</fullName>
    <label>Fugitive slave act enacted</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>