force-app/main/default/objects/Flag__c/fields/Had_liberal_revolution__c.field-meta.xml
<CustomField>
    <fullName>Had_liberal_revolution__c</fullName>
    <label>Had liberal revolution</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>