force-app/main/default/objects/Flag__c/fields/Had_orange_river_convention__c.field-meta.xml
<CustomField>
    <fullName>Had_orange_river_convention__c</fullName>
    <label>Had orange river convention</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>