force-app/main/default/objects/Flag__c/fields/Hasmanifestdestiny__c.field-meta.xml
<CustomField>
    <fullName>Hasmanifestdestiny__c</fullName>
    <label>Hasmanifestdestiny</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>