force-app/main/default/objects/Flag__c/fields/House_gag_rule_enacted__c.field-meta.xml
<CustomField>
    <fullName>House_gag_rule_enacted__c</fullName>
    <label>House gag rule enacted</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>