force-app/main/default/objects/Flag__c/fields/HungarianLanguage__c.field-meta.xml
<CustomField>
    <fullName>HungarianLanguage__c</fullName>
    <label>HungarianLanguage</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>