force-app/main/default/objects/Flag__c/fields/IlyaGarashinin__c.field-meta.xml
<CustomField>
    <fullName>IlyaGarashinin__c</fullName>
    <label>IlyaGarashinin</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>