force-app/main/default/objects/Flag__c/fields/Is_negusa_nagast__c.field-meta.xml
<CustomField>
    <fullName>Is_negusa_nagast__c</fullName>
    <label>Is negusa nagast</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>