force-app/main/default/objects/Flag__c/fields/Italia_ulterior__c.field-meta.xml
<CustomField>
    <fullName>Italia_ulterior__c</fullName>
    <label>Italia ulterior</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>