force-app/main/default/objects/Flag__c/fields/John_browns_raid__c.field-meta.xml
<CustomField>
    <fullName>John_browns_raid__c</fullName>
    <label>John browns raid</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>