force-app/main/default/objects/Flag__c/fields/Kansas_nebraska_act_acting__c.field-meta.xml
<CustomField>
    <fullName>Kansas_nebraska_act_acting__c</fullName>
    <label>Kansas nebraska act acting</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>