force-app/main/default/objects/Flag__c/fields/Kanun_i_esasi_here__c.field-meta.xml
<CustomField>
    <fullName>Kanun_i_esasi_here__c</fullName>
    <label>Kanun i esasi here</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>