force-app/main/default/objects/Flag__c/fields/Kellys_irish_brigade__c.field-meta.xml
<CustomField>
    <fullName>Kellys_irish_brigade__c</fullName>
    <label>Kellys irish brigade</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>