force-app/main/default/objects/Flag__c/fields/Lambert_has_been_chartered__c.field-meta.xml
<CustomField>
    <fullName>Lambert_has_been_chartered__c</fullName>
    <label>Lambert has been chartered</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>