force-app/main/default/objects/Flag__c/fields/Liberal_revolution_in_progress__c.field-meta.xml
<CustomField>
    <fullName>Liberal_revolution_in_progress__c</fullName>
    <label>Liberal revolution in progress</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>