force-app/main/default/objects/Flag__c/fields/LouisNapoleonExtradited__c.field-meta.xml
<CustomField>
    <fullName>LouisNapoleonExtradited__c</fullName>
    <label>LouisNapoleonExtradited</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>