force-app/main/default/objects/Flag__c/fields/LouisPioFirst__c.field-meta.xml
<CustomField>
    <fullName>LouisPioFirst__c</fullName>
    <label>LouisPioFirst</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>