force-app/main/default/objects/Flag__c/fields/Mendizabal_confiscated__c.field-meta.xml
<CustomField>
    <fullName>Mendizabal_confiscated__c</fullName>
    <label>Mendizabal confiscated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>