force-app/main/default/objects/Flag__c/fields/Merina_monarchy_is_over__c.field-meta.xml
<CustomField>
    <fullName>Merina_monarchy_is_over__c</fullName>
    <label>Merina monarchy is over</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>