force-app/main/default/objects/Flag__c/fields/MozartFest1838__c.field-meta.xml
<CustomField>
    <fullName>MozartFest1838__c</fullName>
    <label>MozartFest1838</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>