force-app/main/default/objects/Flag__c/fields/Nashville_convention_held__c.field-meta.xml
<CustomField>
    <fullName>Nashville_convention_held__c</fullName>
    <label>Nashville convention held</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>