force-app/main/default/objects/Flag__c/fields/NoGoToNile__c.field-meta.xml
<CustomField>
    <fullName>NoGoToNile__c</fullName>
    <label>NoGoToNile</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>