force-app/main/default/objects/Flag__c/fields/Participates_in_botanical_expedition__c.field-meta.xml
<CustomField>
    <fullName>Participates_in_botanical_expedition__c</fullName>
    <label>Participates in botanical expedition</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>