force-app/main/default/objects/Flag__c/fields/Presbyteries_introduced__c.field-meta.xml
<CustomField>
    <fullName>Presbyteries_introduced__c</fullName>
    <label>Presbyteries introduced</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>