force-app/main/default/objects/Flag__c/fields/Princes_recieve_foreign_education__c.field-meta.xml
<CustomField>
    <fullName>Princes_recieve_foreign_education__c</fullName>
    <label>Princes recieve foreign education</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>