force-app/main/default/objects/Flag__c/fields/SCAStudent__c.field-meta.xml
<CustomField>
    <fullName>SCAStudent__c</fullName>
    <label>SCAStudent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>