force-app/main/default/objects/Flag__c/fields/Sepoy_rebellion__c.field-meta.xml
<CustomField>
    <fullName>Sepoy_rebellion__c</fullName>
    <label>Sepoy rebellion</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>