force-app/main/default/objects/Flag__c/fields/Serfdom_not_abolished__c.field-meta.xml
<CustomField>
    <fullName>Serfdom_not_abolished__c</fullName>
    <label>Serfdom not abolished</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>