force-app/main/default/objects/Flag__c/fields/Signed_treay_of_london__c.field-meta.xml
<CustomField>
    <fullName>Signed_treay_of_london__c</fullName>
    <label>Signed treay of london</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>