force-app/main/default/objects/Flag__c/fields/State_controlled_rite__c.field-meta.xml
<CustomField>
    <fullName>State_controlled_rite__c</fullName>
    <label>State controlled rite</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>