force-app/main/default/objects/Flag__c/fields/That_book_written__c.field-meta.xml
<CustomField>
    <fullName>That_book_written__c</fullName>
    <label>That book written</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>