force-app/main/default/objects/Flag__c/fields/The_slavery_debate__c.field-meta.xml
<CustomField>
    <fullName>The_slavery_debate__c</fullName>
    <label>The slavery debate</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>