force-app/main/default/objects/Flag__c/fields/Usstatehood_we_have_applied__c.field-meta.xml
<CustomField>
    <fullName>Usstatehood_we_have_applied__c</fullName>
    <label>Usstatehood we have applied</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>