force-app/main/default/objects/Flag__c/fields/Victoria_regina__c.field-meta.xml
<CustomField>
    <fullName>Victoria_regina__c</fullName>
    <label>Victoria regina</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>