force-app/main/default/objects/Flag__c/fields/Von_moltke__c.field-meta.xml
<CustomField>
    <fullName>Von_moltke__c</fullName>
    <label>Von moltke</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>