force-app/main/default/objects/Flag__c/fields/Voule_ton_ellinon__c.field-meta.xml
<CustomField>
    <fullName>Voule_ton_ellinon__c</fullName>
    <label>Voule ton ellinon</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>