force-app/main/default/objects/Flag__c/fields/Walhalla__c.field-meta.xml
<CustomField>
    <fullName>Walhalla__c</fullName>
    <label>Walhalla</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>