force-app/main/default/objects/Flag__c/fields/Watching_the_rhine__c.field-meta.xml
<CustomField>
    <fullName>Watching_the_rhine__c</fullName>
    <label>Watching the rhine</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>