force-app/main/default/objects/Flag__c/fields/Webster_ashburton_signed__c.field-meta.xml
<CustomField>
    <fullName>Webster_ashburton_signed__c</fullName>
    <label>Webster ashburton signed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>