force-app/main/default/objects/Flag__c/fields/YesGoToNile__c.field-meta.xml
<CustomField>
    <fullName>YesGoToNile__c</fullName>
    <label>YesGoToNile</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>