force-app/main/default/objects/Flag__c/fields/YesGoToNileThird__c.field-meta.xml
<CustomField>
    <fullName>YesGoToNileThird__c</fullName>
    <label>YesGoToNileThird</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>