force-app/main/default/objects/Flag__c/fields/You_did_try__c.field-meta.xml
<CustomField>
    <fullName>You_did_try__c</fullName>
    <label>You did try</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>