force-app/main/default/objects/Flag__c/fields/Zul_cb_taken__c.field-meta.xml
<CustomField>
    <fullName>Zul_cb_taken__c</fullName>
    <label>Zul cb taken</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>